<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="e_g_john">e.g. John</string>
    <string name="start">START</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">Finish</string>
    <string name="your_score_is_10">Your score is ?/10</string>
    <string name="todo">TODO</string>
    <string name="image">image</string>
</resources>