<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:gravity="center|top"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/result"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:contentDescription="@string/todo"
        android:scaleX=".8"
        android:scaleY=".8"
        android:src="@drawable/ic_trophy"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hey_congratulations"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/resultName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Name"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_score_is_10"
        android:textSize="22sp"
        android:textColor="#D4D4D4"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/btnBG"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="40dp"/>


</LinearLayout>